<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/mintcream">
    <TextView
        android:id="@+id/dialog_beizhu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_remark"
        android:textSize="16sp"
        android:textColor="@color/green"
        />
    <EditText
        android:id="@+id/dialog_beizhu_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_beizhu_tv"
        android:hint="@string/remark"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="14sp"
        android:background="@color/white">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/dialog_beizhu_et"
        android:padding="10dp">
        <Button
            android:id="@+id/dialog_beizhu_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/green"
            android:background="@drawable/dialog_btn_bg"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/dialog_beizhu_btn_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1"
            android:text="@string/ensure"
            android:background="@drawable/main_btn_rcd"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>