<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_lv_stroke"
        android:padding="20dp">
        <TextView
            android:id="@+id/item_mainlv_top_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_out"
            android:textColor="@color/green"/>
        <TextView
            android:id="@+id/item_mainlv_top_tv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥ 0"
            android:layout_toRightOf="@id/item_mainlv_top_tv1"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/item_mainlv_top_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/item_mainlv_top_tv_out"
            android:text="@string/month_in"
            android:textColor="@color/green"/>
        <TextView
            android:id="@+id/item_mainlv_top_tv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="￥ 0"
            android:layout_toRightOf="@+id/item_mainlv_top_tv2"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/item_mainlv_top_tv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥ 0"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/item_mainlv_top_tv_day"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/item_mainlv_top_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:layout_toLeftOf="@+id/item_mainlv_top_tv_budget"
            android:layout_alignBottom="@+id/item_mainlv_top_tv_day"
            android:textColor="@color/green"/>
        <TextView
            android:id="@+id/item_mainlv_top_tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="今日支出  ￥0  收入  ￥0"
 />
    </RelativeLayout>


</LinearLayout>